[package]
name = "chrono-engine"
version = "0.1.0"
authors = ["Dylan Ede <dylanede@googlemail.com>"]
build = "build.rs"

[build-dependencies]
cpp_build = "0.3"

[dependencies]
cpp = "0.3"
chrono-engine-sys = { path = "chrono-engine-sys", version = "0.1.0" }
nalgebra = "^0.12"
libc = "0.2.8"
lazy_static = "0.2"
void = "^1.0.2"
